# Nudge

./: .gitignore  CMakeLists.txt  README.md
include/: database.hpp  flags.hpp  paths.hpp  setup.hpp
src/: database.cpp  flags.cpp  main.cpp  paths.cpp  setup.cpp
